web/stylesheet.css
.button
{
border-style: outset;
border-radius: 10px;
border-width: medium;
border-color: grey;
background-color: rgb(253,195,1);
font-family:"Arial", Sans-serif;
font-weight: bold;
font-style:bold;
font-size: 20px;
color: black;
text-decoration:none;
padding:20px;
margin:5px;
display:inline-block;
float:left;
width:200px;
height:50px;
margin:5px;
}

.heading
{
font-family:"Arial", Sans-serif;
font-size:50px;
font-weight: bold;
text-transform: uppercase;
color: white;
display:block;
text-align:center;
border-radius: 10px;
border-width: medium;
border-color: grey;
background-color: rgb(0,36,125);
height:100px;
margin:0px;
padding: 20px;
}

.body{
background-color: white;
}

table.box-left{
position:relative;
top:-500px;
left: 50px;
color:white;
border-width: medium;
border-color: grey;
background-color: rgb(0,36,125);
margin:0px;
padding:2px;
}

table.box-right{
position:relative;
top:50px;
right: -1100px;
color:white;
border-width: medium;
border-color: grey;
background-color: rgb(0,36,125);
margin:0px;
padding:2px;
}

.h1{
font-family:"Arial", Sans-serif;
font-size:20px;
font-weight: normal;
text-transform: uppercase;
}

